Add schedule endpoints
